syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/imperiutx/nan_forum/pb";

message CreateUserRequest {
    string user_name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse {
    User user = 1;
}